--- a/dev/styles/global/base.scss
+++ b/dev/styles/global/base.scss
@@ -1,3 +1,20 @@
-html {
-	background: $beige;
+*, *:before, *:after {
+	box-sizing: border-box;
 }
+
+article, aside, figcaption, figure, footer, header, main, nav, section {
+	display: block; 
+}
+
+html {
+	font-size: 100%;
+	-ms-text-size-adjust: 100%;
+	-webkit-text-size-adjust: 100%;
+}
+
+body {
+	background: $background-color;
+	margin: 0;
+	overflow-x: hidden;
+}
+
