--- a/dev/styles/sections/footer.scss
+++ b/dev/styles/sections/footer.scss
@@ -1,20 +1,70 @@
 .site-footer  {
 	color: $green-dark;
 	background: $green-light url(././images/border.png) 120% 0 repeat-x;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 20;
+	@media (min-height: 480px) {
+		position: fixed;
+	    bottom: 0;
+	    left: 0;
+	    right: 0;
+	    z-index: 20;
+	}
 	.block-title {
 		display: none;
 	}
 	a {
 		font-weight: $font-weight-bold;
-		border-bottom: 2px solid;
+		border-bottom: 0px solid;
 		color: $green-dark;
+		@media (max-width: 500px) { 
+			border-bottom: 1px solid
+		}
 	}
 	.row {
 		padding: $padding*4;
+		@media (max-width: 500px) { 
+			padding: $padding*2 $padding*4;
+		}
+	}
+	.block {
+		margin-bottom: 0;
+	}
+	.wrapper {
+		display: inline-block;
+		@media (max-width: 500px) { 
+			display: block;
+		}
+	}
+	.wrapper:first-of-type {
+		@media (min-width: 500px) { 
+			display: block;
+		}
+	}
+	i.fa {
+		display: inline-block;
+		width: 16px;
+		text-align: center;
+	}
+	b {
+		@media (max-width: 500px) {
+			border: 0;
+			clip: rect(0 0 0 0);
+			height: 1px;
+			margin: -1px;
+			overflow: hidden;
+			padding: 0;
+			position: absolute;
+			width: 1px;
+		}
+	}
+	h2 {
+		@include font-size-m;
+		font-family: $font-family-sans;
+		display: inline-block;
+	}
+	* {
+		@media (max-width: 500px) {
+			font-size: 12px;
+			text-align: center;
+		}
 	}
 }
