--- a/dev/styles/helpers/utilities.scss
+++ b/dev/styles/helpers/utilities.scss
@@ -1,3 +1,28 @@
 %clearfix {
 	@include clearfix();
 }
+
+.nowrap {
+	white-space: normal;
+	@media (min-width: 500px) {
+		white-space: nowrap;
+	}
+}
+
+.visuallyhidden {
+    border: 0;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+}
+
+.big-only {
+    display: none;
+    @media (min-width:750px) {
+        display: inline-block;
+    }
+}
