--- a/dev/styles/modules/angebote.scss
+++ b/dev/styles/modules/angebote.scss
@@ -22,6 +22,7 @@
 		.angebot-bild {
 			position: absolute;
             z-index: 1;
+            width: 100%;
 		}
 		.angebot-bezeichnung {
 			padding: 14px 1em 0 14px;
@@ -51,14 +52,20 @@
             z-index: 4;
             box-shadow: 1px 1px 2px $red-dark;
             transform: rotateX(4deg);
+
             .angebot-preis {
                 position: absolute;
-                @include font-size-l();
-                top: 1em;
-                left: .6em;
+                font-size: $font-size-4;
+                line-height: $line-height-4;
+
+                top: .75em;
+                left: 0;
+                right: 0;
+                text-align: center;
                 font-weight: bold;
                 text-shadow: 1px 1px 1px #000;
                 color: #fff;
+                font-family: $font-family-script;
             }
 		}
 		.angebot-einheit {
